# api/schemas/__init__.py
@@ -1,3 +1,3 @@
-from .robot import Robot, RobotCreate, RobotUpdate
+from .robot import Robot, RobotCreate, RobotUpdate, RobotStatus
 
-__all__ = ["Robot", "RobotCreate", "RobotUpdate"]
+__all__ = ["Robot", "RobotCreate", "RobotUpdate", "RobotStatus"]
