# openapi.json
@@ -14,6 +14,38 @@
         "operationId": "list",
         "parameters": [
           {
+            "name": "system_status",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "$ref": "#/components/schemas/RobotStatus"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "System Status"
+            }
+          },
+          {
+            "name": "connected",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "anyOf": [
+                {
+                  "type": "boolean"
+                },
+                {
+                  "type": "null"
+                }
+              ],
+              "title": "Connected"
+            }
+          },
+          {
             "name": "page",
             "in": "query",
             "required": false,
